# yuno-miles-coder

./: .dockerignore  .env.example  .gitignore  API_SPECIFICATION.md  DEPLOYMENT.md  PROJECT_SYSTEM_AND_FEATURES.md  README.md  docker-compose.yml  pyproject.toml  structure
app/: cli.py  engine.py  formatter.py  llm.py  local_style.py  pack_loader.py  persona.py  redact.py  server.py
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: cache.py  cli.py  cloud_explain.py  generator.py  pack_loader.py  server.py  snippets_db.py
examples/: hello.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.jsx  index.css  main.jsx
yuno-s-code-chaos/: Dockerfile  index.html  nginx.conf  package-lock.json  tailwind.config.ts  vite.config.ts
yuno-s-code-chaos/src/: index.css
yuno-s-code-chaos/src/components/: CodeEditor.tsx  ModeToggle.tsx  OutputDisplay.tsx  PersonaSelector.tsx  SpiceSlider.tsx  Spinner.tsx
yuno-s-code-chaos/src/pages/: Index.tsx
